--- a/css/screen.css
+++ b/css/screen.css
@@ -43,14 +43,11 @@
     --color-neutral-xx-dark: #4b4c60;
     --color-neutral-xxx-dark: #35374d;
     --color-neutral-xxxx-dark: #20223a;
-
     /* Shadows */
     --shadow-color: #20223a15;
     --inset-shadow: inset 0 1px 1px var(--shadow-color);
-
     /* border radius */
     --radius: 3px;
-
     /* transitions */
     --transition-alpha: .1s ease-out;
 }
@@ -76,9 +73,7 @@ html {
     background-color: var(--color-neutral-xxxx-light);
 }
 
-*,
-*:before,
-*:after {
+*, *:before, *:after {
     box-sizing: inherit;
 }
 
@@ -122,9 +117,7 @@ img {
     Default markup for typographic elements
 */
 
-h1,
-h2,
-h3 {
+h1, h2, h3 {
     font-weight: 700;
 }
 
@@ -146,32 +139,22 @@ h3 {
     margin: 0 0 24px;
 }
 
-h4,
-h5,
-h6 {
+h4, h5, h6 {
     font-size: 16px;
     font-weight: 600;
     line-height: 24px;
     margin: 0 0 24px;
 }
 
-p,
-ol,
-ul,
-dl,
-table,
-address,
-figure {
+p, ol, ul, dl, table, address, figure {
     margin: 0 0 24px;
 }
 
-ul,
-ol {
+ul, ol {
     padding-left: 24px;
 }
 
-li ul,
-li ol {
+li ul, li ol {
     margin-bottom: 0;
 }
 
@@ -209,18 +192,15 @@ a {
     outline-offset: 2px;
 }
 
-a:visited,
-a:active {
+a:visited, a:active {
     color: var(--color-alpha);
 }
 
-a:hover,
-a:focus {
+a:hover, a:focus {
     color: var(--color-alpha-light);
 }
 
-label,
-input {
+label, input {
     display: block;
 }
 
@@ -292,7 +272,8 @@ input::placeholder {
 .o-container {
     margin-left: auto;
     margin-right: auto;
-    max-width: 79.5em; /* 79.5 * 16px = 1272 */
+    max-width: 79.5em;
+    /* 79.5 * 16px = 1272 */
     width: 100%;
 }
 
@@ -306,19 +287,18 @@ input::placeholder {
     position: relative;
 }
 
-.o-section + .o-section {
+.o-section+.o-section {
     padding-top: 24px;
 }
 
 @media (min-width: 768px) {
-    .o-section--lg + .o-section--lg,
-    .o-section--xl + .o-section--xl {
+    .o-section--lg+.o-section--lg, .o-section--xl+.o-section--xl {
         padding-top: 48px;
     }
 }
 
 @media (min-width: 992px) {
-    .o-section--xl + .o-section--xl {
+    .o-section--xl+.o-section--xl {
         padding-top: 72px;
     }
 }
@@ -348,7 +328,7 @@ input::placeholder {
     margin: 0 -12px;
 }
 
-.o-layout--gutter > .o-layout__item {
+.o-layout--gutter>.o-layout__item {
     padding: 0 12px;
 }
 
@@ -356,7 +336,7 @@ input::placeholder {
     margin: 0 -6px;
 }
 
-.o-layout--gutter-sm > .o-layout__item {
+.o-layout--gutter-sm>.o-layout__item {
     padding: 0 6px;
 }
 
@@ -364,7 +344,7 @@ input::placeholder {
     margin: 0 -24px;
 }
 
-.o-layout--gutter-lg > .o-layout__item {
+.o-layout--gutter-lg>.o-layout__item {
     padding: 0 24px;
 }
 
@@ -372,7 +352,7 @@ input::placeholder {
     margin: 0 -48px;
 }
 
-.o-layout--gutter-xl > .o-layout__item {
+.o-layout--gutter-xl>.o-layout__item {
     padding: 0 48px;
 }
 
@@ -472,18 +452,14 @@ input::placeholder {
     width: auto;
     overflow: visible;
     background: transparent;
-
     /* inherit font & color from ancestor */
     color: inherit;
     font: inherit;
-
     /* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
     line-height: normal;
-
     /* Corrects font smoothing for webkit */
     -webkit-font-smoothing: inherit;
     -moz-osx-font-smoothing: inherit;
-
     /* Corrects inability to style clickable `input` types in iOS */
     -webkit-appearance: none;
 }
@@ -555,15 +531,16 @@ input::placeholder {
     background-color: white;
     margin-bottom: 24px;
     border-radius: var(--radius);
-    box-shadow: 0 0 0 1px rgba(0,0,0, 0.05), 0 2px 4px rgba(0,0,0,.075);
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0 2px 4px rgba(0, 0, 0, .075);
     overflow: hidden;
 }
 
 /* Add padding to child for more flexibility */
-.c-card__body,
-.c-card__footer {
+
+.c-card__body, .c-card__footer {
     padding: 24px 24px 0;
-    overflow: auto; /* Fix margin collapse */
+    overflow: auto;
+    /* Fix margin collapse */
 }
 
 .c-card__footer {
@@ -583,7 +560,6 @@ input::placeholder {
     .c-card__body {
         padding: 48px 48px 24px;
     }
-
     .c-card__title {
         margin-bottom: 48px;
     }
@@ -622,17 +598,18 @@ input::placeholder {
     font-size: 16px;
     line-height: 24px;
     padding: 11px 16px;
+    /* 24+ 16 = 40px*/
     outline: none;
     box-shadow: var(--inset-shadow);
     transition: border var(--transition-alpha);
+    cursor: pointer;
 }
 
 .c-input:hover {
     border-color: var(--color-neutral-xx-light);
 }
 
-.c-input:focus,
-.c-input:active {
+.c-input:focus, .c-input:active {
     border-color: var(--color-alpha-x-light);
     box-shadow: 0 0 0 3px var(--color-alpha-xx-light);
 }
@@ -655,6 +632,7 @@ input::placeholder {
     font-size: 14px;
     line-height: 16px;
     color: var(--color-neutral-x-dark);
+    cursor: pointer;
 }
 
 .c-label--option {
@@ -702,11 +680,11 @@ input::placeholder {
 */
 
 .c-option-list {
-
+    margin-bottom: 24px;
 }
 
 .c-option-list__item {
-
+    margin-bottom: 12px;
 }
 
 /*
@@ -715,22 +693,155 @@ input::placeholder {
     Custom checkboxes & radio buttons
 */
 
+.c-custom-input-option__symbol {
+    opacity: 0;
+    transform: scale(2);
+    display: block;
+    /* easying */
+    will-change: opacity, transform;
+    -webkit-transition: opacity var(--transition-alpha), transform var(--transition-alpha);
+    -moz-transition: opacity var(--transition-alpha), transform var(--transition-alpha);
+    -o-transition: opacity var(--transition-alpha), transform var(--transition-alpha);
+    transition: opacity var(--transition-alpha), transform var(--transition-alpha);
+}
+
+.c-custom-input-option-label {
+    display: flex;
+}
+
+.c-custom-input-option {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 16px;
+    width: 16px;
+    border: 1px solid var(--color-neutral-xxx-light);
+    margin-right: 8px;
+    box-shadow: var(--inset-shadow);
+}
+
+.c-custom-input-option-label:hover .c-custom-input-option, .c-custom-input-option:hover {
+    border: 1px solid var(--color-neutral-xx-light);
+}
+
+.c-custom-input-option--checkbox {
+    border-radius: var(--border);
+}
+
+.c-custom-input-option--radio {
+    border-radius: 100%;
+}
+
+.c-custom-input-option--checkbox .c-custom-input-option__symbol {
+    height: 10px;
+    width: 10px;
+    fill: var(--color-alpha);
+}
+
+.c-custom-input-option--radio .c-custom-input-option__symbol {
+    height: 6px;
+    width: 6px;
+    border-radius: 100%;
+    background-color: var(--color-alpha);
+}
+
 /* Hide the actual input with the class .o-hide-accessible */
 
 /* checked state */
 
-.c-custom-input-option-hidden:checked + .c-custom-input-option-label {
+.c-custom-input-option-hidden:focus+.c-custom-input-option-label .c-custom-input-option {
     /*
         Do magic stuff here, for example:
         background-color: red;
     */
+    border: 1px solid var(--color-neutral-x-light);
 }
 
-.c-custom-input-option-hidden:checked + .c-custom-input-option-label .c-custom-input-option__symbol {
+.c-custom-input-option-hidden:checked+.c-custom-input-option-label .c-custom-input-option__symbol {
     /*
         Do magic stuff here, for example:
         fill: blue;
     */
+    opacity: 1;
+    transform: scale(1);
+}
+
+.c-custom-select {
+    display: block;
+    position: relative;
+}
+
+.c-custom-select__symbol {
+    display: block;
+    fill: var(--color-neutral-x-light);
+    position: absolute;
+    height: 24px;
+    width: 24px;
+    /* c-input = 48 px */
+    /*height = 24px --> 48 -24 = 24 /2 = 12 */
+    top: 12px;
+    right: 12px;
+    pointer-events: none;
+}
+
+.c-toggle__label {
+    display: flex;
+}
+
+.c-toggle__input {
+    width: 48px;
+    height: 20px;
+    border-radius: 24px;
+    background-color: var(--color-neutral-xxx-light);
+    display: block;
+    margin-right: 16px;
+}
+
+.c-toggle__input::after {
+    content: "";
+    display: block;
+    border-radius: 100%;
+    background-color: #ffffff;
+    width: 22px;
+    height: 22px;
+    box-shadow: 0 0 1px 3px rgba(0, 0, 0, 0.16);
+    transition: all var(--transition-alpha)
+}
+
+.c-toggle__checkbox-hidden:checked+.c-toggle__label .c-toggle__input::after {
+    transform: translateX(28px);
+}
+
+.c-toggle__checkbox-hidden:checked+.c-toggle__label .c-toggle__input {
+    background-color: var(--color-alpha-dark);
+}
+
+.c-toggle__checkbox-hidden:focus+.c-toggle__label .c-toggle__input {
+    box-shadow: 0 0 2px 3px var(--color-alpha-xx-light);
+}
+
+.c-toggle__label--inverted>.c-toggle__input {
+    margin-right: 0px;
+}
+
+.c-toggle__checkbox-hidden:checked+.c-toggle__label .c-toggle__input--alternative {
+    background-color: var(--color-alpha-xx-light);
+}
+
+.c-toggle__checkbox-hidden:checked+.c-toggle__label .c-toggle__input--alternative::after {
+    transform: translateX(28px);
+    background-color: var(--color-alpha);
+}
+
+.c-toggle-list__item+.c-toggle-list__item {
+    border-top: 1px solid var(--color-neutral-xxx-light);
+    padding-top: 8px;
+}
+
+.c-toggle__label--inverted {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row-reverse;
 }
 
 /*------------------------------------*\
@@ -810,7 +921,6 @@ input::placeholder {
 .u-max-width-none {
     max-width: none !important;
 }
-
 
 /*
     Utilities: align
@@ -1074,9 +1184,7 @@ No media query since this is the default in mobile first design
 */
 
 @media print {
-    *,
-    *:before,
-    *:after {
+    *, *:before, *:after {
         background: transparent !important;
         color: #000 !important;
         /* Black prints faster:
@@ -1084,8 +1192,7 @@ No media query since this is the default in mobile first design
         box-shadow: none !important;
         text-shadow: none !important;
     }
-    a,
-    a:visited {
+    a, a:visited {
         text-decoration: underline;
     }
     a[href]:after {
@@ -1098,15 +1205,13 @@ No media query since this is the default in mobile first design
     * Don't show links that are fragment identifiers,
     * or use the `javascript:` pseudo protocol
     */
-    a[href^="#"]:after,
-    a[href^="javascript:"]:after {
+    a[href^="#"]:after, a[href^="javascript:"]:after {
         content: "";
     }
     pre {
         white-space: pre-wrap !important;
     }
-    pre,
-    blockquote {
+    pre, blockquote {
         border: 1px solid #999;
         page-break-inside: avoid;
     }
@@ -1117,18 +1222,14 @@ No media query since this is the default in mobile first design
     thead {
         display: table-header-group;
     }
-    tr,
-    img {
+    tr, img {
         page-break-inside: avoid;
     }
-    p,
-    h2,
-    h3 {
+    p, h2, h3 {
         orphans: 3;
         widows: 3;
     }
-    h2,
-    h3 {
+    h2, h3 {
         page-break-after: avoid;
     }
 }
